# scanomatic-standalone

./: .babelrc  .eslintrc.yml  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  karma.conf.js  package-lock.json  package.json  pyproject.toml  setup.py  tox.ini  version.hash
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  postStart.sh  start-scanomatic.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-publish.yml  mypy-pr.yml  typecheck-pr.yml
scanomatic/: __init__.py  cli.py
scanomatic/data_processing/: calibration.py
scanomatic/data_processing/pheno/: save.py
scanomatic/generics/: abstract_model_factory.py  model.py
scanomatic/image_analysis/: analysis_image.py  blob.py  histogram.py  support.py
scanomatic/io/: first_pass_results.py  image_loading.py  jsonizer.py  meta_data.py  power_manager.py  rpc_client.py  source.py
scanomatic/models/factories/: scanning_factory.py
scanomatic/server/: compile_effector.py  interface_builder.py  phenotype_effector.py
scanomatic/ui_server/: data_api.py  general.py  qc_api.py
scanomatic/ui_server_data/js/ccc/: api.js
scanomatic/ui_server_data/js/ccc/containers/: CCCEditorContainer.jsx  CCCInitializationContainer.jsx  ColonyEditorContainer.jsx  PlateEditorContainer.jsx  RootContainer.jsx
scanomatic/ui_server_data/js/tests/containers/: RootContainer.test.jsx
scanomatic/util/: project.py
tests/integration/: test_analysis_effector.py
tests/integration/image_analysis/: test_image_fixture.py
tests/system/: conftest.py  docker-compose.override.yml  test_analysis.py  test_fixtures.py  test_scanner_api.py
tests/unit/data_processing/: test_calibration.py  test_phase_phenotypes.py
tests/unit/data_processing/pheno/: test_state.py
tests/unit/image_analysis/: test_grid.py  test_grid_array.py
tests/unit/io/: test_jsonizer.py
tests/unit/models/factories/: test_analysis_factory.py
tests/unit/ui_server/: test_calibration_api.py  test_experiment_api.py  test_general.py
tools/: image_analysis_support.py  signal.py  strain_handler.py
