[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[project]
name = "scanomatic-standalone"
version = "3.0.2"
description = "High Throughput Solid Media Image Phenotyping Platform"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = { text = "GPL-3.0" }
authors = [
  { name = "Martin Zackrisson", email = "martin.zackrisson@gu.se" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: X11 Applications",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "flask==2.0.2",
  "flask-cors==3.0.10",
  "flask-restful==0.3.9",
  "numpy>=1.21.3,<2.0.0",
  "pandas<=2.0.0",
  "matplotlib",
  "requests==2.26.0",
  "xlrd==2.0.1",
  "pillow==9.5.0",
  "odfpy==1.4.1",
  "sh==1.14.2",
  "scikit-image>=0.18.3,<=0.20.0",
  "setproctitle==1.2.2",
  "psutil==5.8.0",
  "chardet==4.0.0",
  "openpyxl==3.0.9",
  "python-nmap==0.7.1",
  "werkzeug==2.0.2",
]

[project.optional-dependencies]
test = [
  "mock==4.0.3",
  "pytest==7.2.0",
  "pytest-cov==4.0.0",
  "pytest-flask==1.2.0",
  "pytest-docker<3.0.0",
  "selenium==4.6.0"
]
lint = [
  "flake8==5.0.4"
]
typecheck = [
  "mock==4.0.3",
  "pytest==7.2.0",
  "pytest-cov==4.0.0",
  "pytest-docker<3.0.0",
  "pytest-flask==1.2.0",
  "mypy==0.990",
  "selenium==4.6.0"
]
dev = [
  "flake8==5.0.4",
  "mock==4.0.3",
  "mypy==0.990",
  "pandas-stubs==1.5.3.230321",
  "pytest-cov==4.0.0",
  "pytest-docker<3.0.0",
  "pytest-flask==1.2.0",
  "pytest==7.2.0",
  "selenium==4.6.0",
  "types-chardet==4.0.1",
  "types-mock==4.0.3",
  "types-pillow==8.3.7",
  "types-psutil==5.8.13",
  "types-python-dateutil==2.8.2",
  "types-python-nmap==0.6.2",
  "types-requests==2.25.11"
]

[project.scripts]
scan-o-matic = "scanomatic.cli:scan_o_matic_main"
scan-o-matic_server = "scanomatic.cli:scan_o_matic_server_main"

[tool.uv.build-backend]
module-root = ""
module-name = "scanomatic"
source-include = [
"scanomatic/ui_server_data/",
"scanomatic/images/"
]
wheel-exclude = []
source-exclude = []
